# foodx_backup_source

./: .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  setup.cfg
backup_source/: __init__.py
docker/pipeline/: requirements.txt
foodx_backup_source/: __init__.py  _file_io.py  _hash.py  _main.py  _snapshot.py  azure.py  entrypoint.py  schema.py
tests/ci/unit_tests/: conftest.py  test_azure.py  test_file_io.py  test_main.py  test_schema.py  test_snapshot.py  test_version.py
tests/ci/unit_tests/data/: dependencies_d1.yaml  dependencies_d2.yaml
