[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<3"]


[tool.flit.metadata]
module = "foodx_backup_source"
author = "FoodX Technologies"
author-email = "support@foodxtech.com"
description-file = "README.rst"
home-page = "https://github.com/Food-X-Technologies/foodx_backup_source/"

requires-python = ">=3.9"

requires = [
    "aiofiles ~= 0.8.0",
    "aiohttp ~= 3.8.1",
    "deepmerge ~= 1.0.1",
    "gitpython ~= 3.1.24",
    "pydantic ~= 1.8.2",
    "ruamel.yaml ~= 0.17.17",
]

[tool.flit.metadata.requires-extra]
dev = [
    "build_harness ~= 0.2.1",
    "pre_commit ~= 2.13.0",
    "types-aiofiles",
]
doc = [
    "sphinx ~= 4.0.2",
    "sphinx_rtd_theme ~= 0.5.2",
]
test = [
    "asynctest >=0.13.0, <1.0",
    "pytest ~= 6.2.4",
    "pytest-asyncio >=0.15.1, <1.0",
    "pytest-cov ~= 2.12.1",
    "pytest-mock ~= 3.6.1",
]


[tool.black]
# Don't forget to sync this with isort, .flake8
line-length = 80


[tool.isort]
# Don't forget to sync this with black, .flake8
line_length = 80
profile = "black"


[tool.coverage.run]
# branch and concurrency settings seem to be needed due to this problem:
# pytest-cov internal error "Can't combine line data with arc data"
# https://github.com/pytest-dev/pytest-cov/issues/243
branch = true
concurrency = ["multiprocessing"]
omit = [".venv/*"]
source = ["foodx_backup_source"]


[tool.coverage.report]
exclude_lines = [
    "except ImportError",
    "raise NotImplementedError",
    "pass",
    "ABCmeta",
    "abstractmethod",
    "warnings.warn",
]
precision = 0
show_missing = true
