[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<3"]


[tool.flit.metadata]
module = "foodx_backup_source"
author = "FoodX Technologies"
author-email = "support@foodxtech.com"
description-file = "README.rst"
home-page = "https://github.com/Food-X-Technologies/foodx_backup_source/"

requires-python = ">=3.8"

requires = [
    "aiofiles ~=0.8.0",
    "aiohttp ~=3.8.1",
    "click ~=8.1.2",
    "deepmerge ~=1.0.1",
    "gitpython ~=3.1.27",
    "pydantic ~=1.9.0",
    "ruamel.yaml ~=0.17.20",
]

[tool.flit.metadata.requires-extra]
dev = [
    "build_harness ~=1.0.1",
    "pre_commit ~=2.17.0",
    "types-aiofiles ~=0.8.3",
]
doc = [
    "sphinx ~=4.5.0",
    "sphinx_rtd_theme ~=1.0",
]
test = [
    "pytest ~=7.1.1",
    "pytest-asyncio ~=0.18.3",
    "pytest-cov ~=3.0",
    "pytest-mock ~=3.7.0",
]


[tool.flit.scripts]
backup-source = "foodx_backup_source.entrypoint:main"


[tool.black]
# Don't forget to sync this with isort, .flake8
line-length = 80


[tool.isort]
# Don't forget to sync this with black, .flake8
line_length = 80
profile = "black"


[tool.coverage.run]
# branch and concurrency settings seem to be needed due to this problem:
# pytest-cov internal error "Can't combine line data with arc data"
# https://github.com/pytest-dev/pytest-cov/issues/243
branch = true
concurrency = ["multiprocessing"]
omit = [".venv/*"]
source = ["foodx_backup_source"]


[tool.coverage.report]
exclude_lines = [
    "except ImportError",
    "raise NotImplementedError",
    "pass",
    "ABCmeta",
    "abstractmethod",
    "warnings.warn",
]
omit = [
    # very little test utility in this file and "0%" test coverage biases coverage results, so exclude it.
    "*/entrypoint.py"
]
precision = 0
show_missing = true
